fix:Fix the site on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -152,19 +152,7 @@ a {
 		// background-position: center center;
 		background: rgba(0,0,0,0.3);
 		color: rgba(255, 255, 255, .9);
-		.content-blk {
-			padding: 60px 120px;
-			letter-spacing: 1.2px;
-			line-height: 50px;
-			font-weight: 100;
-		}
-		p {
-			margin-top: 60px;
-			font-size: 24px;
-			text-align: center;
-			color: rgba(255, 255, 255, .9);
-			font-family: 'Sedgwick Ave', cursive !important;
-		}
+		
 	}
 	.logo-container {
 		position: relative;
