--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,11 +5,11 @@
 
 .header {
 	background: rgb(0,0,0);
-	background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+	background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(183,121,31,.4) 100%);
 }
 
 .the-hero {
-	margin-top: -180px;
+	margin-top: -90px;
 }
 .hero-container {
 	background-color: #6272BC;
